# Maixpy-K210-stubs

./: MANIFEST.in  README.md  fpioa_manager.pyi  lcd.pyi  machine.pyi  pyproject.toml  sensor.pyi  setup.py
src/: KPU.pyi  Maix.pyi  image.pyi  uos.pyi
