[project]
name = "MaixpyK210-stubs"
version = "0.1.0"
description = "Type stubs for Maixpy K210"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Typing :: Stubs Only",
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry]
# 不使用 package-mode
packages = [
    { include = "Maix.pyi" },
    { include = "KPU.pyi" },
    { include = "sensor.pyi" },
    { include = "lcd.pyi" },
    { include = "image.pyi" },
    { include = "machine.pyi" },
    { include = "math.pyi" },
    { include = "cmath.pyi" },
    { include = "gc.pyi" },
    { include = "ubinascii.pyi" },
    { include = "ucollections.pyi" },
    { include = "uctypes.pyi" },
    { include = "uerrno.pyi" },
    { include = "uhashlib.pyi" },
    { include = "uheapq.pyi" },
    { include = "ujson.pyi" },
    { include = "uos.pyi" },
    { include = "ure.pyi" },
    { include = "usocket.pyi" },
    { include = "ustruct.pyi" },
    { include = "utime.pyi" },
    { include = "zlib.pyi" },
    { include = "fpioa_manager.pyi" },
    { include = "py.typed" },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"